crates/ruff_linter/src/rules/flake8_executable/snapshots/ruff_linter__rules__flake8_executable__tests__EXE001_1.py.snap
---
source: crates/ruff_linter/src/rules/flake8_executable/mod.rs
---
EXE001 Shebang is present but file is not executable
 --> EXE001_1.py:1:1
  |
1 | #!/usr/bin/python
  | ^^^^^^^^^^^^^^^^^
  |
