crates/ruff_linter/src/rules/flake8_executable/snapshots/ruff_linter__rules__flake8_executable__tests__EXE002_1.py.snap
---
source: crates/ruff_linter/src/rules/flake8_executable/mod.rs
---
[EXE002]: The file is executable but no shebang is present
 --> EXE002_1.py:1:1
  |
1 | if __name__ == '__main__':
  | ^
2 |     print('I should be executable.')
  |
