crates/ruff_linter/src/rules/flake8_executable/snapshots/ruff_linter__rules__flake8_executable__tests__EXE002_4.py.snap
---
source: crates/ruff_linter/src/rules/flake8_executable/mod.rs
---
EXE002 The file is executable but no shebang is present
--> EXE002_4.py:1:1
