crates/ruff_linter/src/rules/flake8_executable/snapshots/ruff_linter__rules__flake8_executable__tests__EXE003.py.snap
---
source: crates/ruff_linter/src/rules/flake8_executable/mod.rs
---
EXE003 Shebang should contain `python`, `pytest`, or `uv run`
 --> EXE003.py:1:1
  |
1 | #!/usr/bin/bash
  | ^^^^^^^^^^^^^^^
  |
