crates/ruff_linter/src/rules/flake8_executable/snapshots/ruff_linter__rules__flake8_executable__tests__EXE004_1.py.snap
---
source: crates/ruff_linter/src/rules/flake8_executable/mod.rs
---
EXE004 [*] Avoid whitespace before shebang
 --> EXE004_1.py:1:1
  |
1 |     #!/usr/bin/python
  | ^^^^
help: Remove whitespace before shebang
  |
1 | #!/usr/bin/python
  |
