crates/ruff_linter/src/rules/flake8_executable/snapshots/ruff_linter__rules__flake8_executable__tests__EXE004_3.py.snap
---
source: crates/ruff_linter/src/rules/flake8_executable/mod.rs
---
[EXE005]: Shebang should be at the beginning of the file
 --> EXE004_3.py:2:7
  |
2 | pass  #!/usr/bin/env python
  |       ^^^^^^^^^^^^^^^^^^^^^
  |
