crates/ruff_linter/src/rules/flake8_executable/snapshots/ruff_linter__rules__flake8_executable__tests__EXE004_4.py.snap
---
source: crates/ruff_linter/src/rules/flake8_executable/mod.rs
---
EXE004 [*] Avoid whitespace before shebang
 --> EXE004_4.py:1:1
  |
1 | /
2 | |     #!/usr/bin/env python
  | |____^
help: Remove whitespace before shebang
  |
1 | #!/usr/bin/env python
  |
note: This is an unsafe fix and may change runtime behavior
