crates/ruff_linter/src/rules/flake8_executable/snapshots/ruff_linter__rules__flake8_executable__tests__EXE005_1.py.snap
---
source: crates/ruff_linter/src/rules/flake8_executable/mod.rs
---
EXE005 Shebang should be at the beginning of the file
 --> EXE005_1.py:3:1
  |
2 | # A python comment
3 | #!/usr/bin/python
  | ^^^^^^^^^^^^^^^^^
